fix layout: overflow text & fontsize

--- a/main.css
+++ b/main.css
@@ -2,54 +2,32 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
 .grimoire_container {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	z-index: -1;
 }
-.timezone {
+.clock_container {
 	display: flex;
 	justify-content: center;
-	align-content: center;
-	background-color: rgba(111,111,111,0.15);
-	position: absolute;
-	top: 38%;
-	left: 50%;
-	margin-top: -20px;
-	margin-left: -50px;
-	width: 100px;
-	height: 40px;
+	align-items: center;
+	flex-direction: column;
+	height: 100vh;
 }
-.timezone p {
-	margin: 0;
+.clock_container p {
+	margin: 16px;
 	font-weight: bold;
-	font-size: 30px;
-	/*font-family: 'Montserrat', sans-serif;*/
-	/*font-family: 'Work Sans', sans-serif;*/
-	/*font-family: 'Yantramanav', sans-serif;*/
+	background-color: rgba(111,111,111,0.15);
+}
+#timezone {
+	padding: 0 1rem;
+	font-size: 2rem;
 	font-family: 'Heebo', sans-serif;
 }
-.clock {
-	background-color: rgba(111,111,111,0.15);
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: -40px;
-	margin-left: -250px;
-	width: 500px;
-	height: 80px;
-	display: flex;
-	justify-content: center;
-	align-content: center;
-}
-.clock p {
-	margin: 0;
-	font-weight: bold;
-	font-size: 70px;
+#clock {
+	padding: 0 5rem;
+	font-size: 7rem;
 	letter-spacing: 5px;
-	/*font-family: 'Montserrat', sans-serif;*/
-	/*font-family: 'Work Sans', sans-serif;*/
 	font-family: 'Yantramanav', sans-serif;
-	/*font-family: 'Heebo', sans-serif;*/
 }
